--- a/_posts/2022-02-02-article1.md
+++ b/_posts/2022-02-02-article1.md
@@ -1,5 +1,5 @@
 ---
-layout: blog-youtube
+layout: blog
 permalink: /gebackene-sesamschenkel/
 pagedesc: Gebackene Sesam-Schenkel
 title: Gebackene Sesam-Schenkel
@@ -10,10 +10,6 @@ tags: [Huhn, Hauptspeise]
 htmlbeforeheadend: blog/htmlbeforeheadend.html
 htmlbeforebodyend: blog/htmlbeforebodyend.html
 ---
-“In this video, I’m going to show you how to make money with google maps.
-
-And you can easily use this strategy to make $100-$200 per day, but I’m going to show you how you can make WAY more than that with the power of smart marketing and reciprocity – enjoy!”
-
 <section data-bs-version="5.1">
 
     <div style="max-width: 600px; margin: auto;">
