--- a/_posts/2022-02-02-article1.md
+++ b/_posts/2022-02-02-article1.md
@@ -6,7 +6,7 @@ title: Gebackene Sesam-Schenkel
 headline: Gebackene Sesam-Schenkel
 thumbnail: /wp-content/images/Afy2BZ5u_94-HQ.jpg
 youtubeurl: 'https://www.youtube.com/watch?v=3otxuuogqr0'
-tags: [Huhn, Hauptspeise, Asia]
+tags: [Huhn, Hauptspeise]
 htmlbeforeheadend: blog/htmlbeforeheadend.html
 htmlbeforebodyend: blog/htmlbeforebodyend.html
 ---
