--- a/_posts/2023-03-05-baguette.md
+++ b/_posts/2023-03-05-baguette.md
@@ -1,5 +1,5 @@
 ---
-layout: blog-zubereitung
+layout: blog
 permalink: /baguette/
 pagedesc: Köstlich Crosse Baguettes
 title: Köstlich Crosse Baguettes
